- docs update - style adjustments

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "fast-select",
+  "name": "fastselect",
   "version": "0.1.0",
   "homepage": "https://github.com/dbrekalo/fastselect",
   "authors": [
