--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fastselect",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/dbrekalo/fastselect"
@@ -13,6 +13,7 @@
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-include-replace": "^3.2.0",
     "grunt-jscs": "^1.5.0",
     "load-grunt-tasks": "^0.6.0"
   }
