--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fastselect",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "homepage": "https://github.com/dbrekalo/fastselect",
   "authors": [
     "Damir Brekalo <dbrekalo@gmail.com>"
@@ -24,7 +24,7 @@
     "bourbon": "~4.2.3"
   },
   "dependencies": {
-    "jquery": "~2.1.4",
+    "jquery": ">=1.7",
     "fastsearch": "~1"
   }
 }
